--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>K-events</title>
   </head>
   <body>
-    Bienvenue sur K-events
+    <h1>Bienvenue sur K-events</h1>
+    <b><span>Chasse aux oeufs: </span></b><i>10.04.2023</i>
+    <p><img src="images/paques.png" height="300px" /></p>
   </body>
 </html>
