--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   </head>
   <body>
     <h1>Bienvenue sur K-events</h1>
-    <b><span>Chasse aux oeufs: </span></b><i>10.04.2023</i>
+    <span style="font-size: large">
+      <b>Chasse aux oeufs: </b><i>lundi 10 avril 2023</i>
+    </span>
     <p><img src="images/paques.png" height="300px" /></p>
   </body>
 </html>
+
+<!--TODO: style (backgroundcolor), logo -->
